k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-api-app
  namespace: video # 네임스페이스 설정
spec:
  replicas: 2 # Pod의 복제본 수
  selector:
    matchLabels:
      app: video-api-app # 레이블 설정
  template:
    metadata:
      labels:
        app: video-api-app # 레이블 설정
    spec:
      serviceAccountName: video-sa
      containers:
        - name: video-api-container # 컨테이너 이름
          image: 339712823683.dkr.ecr.ap-northeast-3.amazonaws.com/backend:32
          ports:
            - containerPort: 8000 # video-api가 사용하는 포트
