k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chuno-backend-ingress
  namespace: video
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing  # ALB의 타입을 인터넷에 노출하도록 설정
    alb.ingress.kubernetes.io/target-type: ip  # 대상 그룹의 타입을 IP로 설정
    alb.ingress.kubernetes.io/group.name: eks-chuno-group
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-3:339712823683:certificate/4cf3924b-2654-4daf-8463-16265264f688
spec:
  ingressClassName: alb
  rules:
    #- host: api.chuno.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: video-api-service  # 사용하고자 하는 서비스의 이름
                port:
                  number: 80  # 서비스의 포트 번호
